fix: add new id for input date checker

--- a/views/index.pug
+++ b/views/index.pug
@@ -55,7 +55,7 @@ html(lang='en')
         h3#check check for open events by date
         .chart
 
-        input.event-checker(type='date', placeholder="dd/mm/yyyy")
+        input#check-event.event-checker(type='date', placeholder="dd/mm/yyyy")
         .spinner#loader
           div
         p.tagline.center#results <strong>Tip:</strong> Avoid clashes with other events held on <br> <a href="http://data.webuild.sg/dataset/events-per-day-of-week/" target="_blank">most active days of the week</a> or <a href="http://data.webuild.sg/dataset/events-per-week-of-month/">most active week of the month</a>
