add links to /about and /faq. #285

--- a/views/layout/footer.pug
+++ b/views/layout/footer.pug
@@ -1,6 +1,6 @@
 footer
   .container
-    <p>Checkout more cool events and people in startup, arts and tech with <br><a href="http://thelist.sg/">thelist.sg</a>, <a href="http://connections.sg/">connections.sg</a>, <a href="http://hackerspace.sg/calendar/hackerspacesg-events/">hackerspace</a>, <a href="http://bhappening.wordpress.com/">bhappening</a>, <a href="http://www.techinasia.com/tech-startup-events/">tech in asia</a></p>
+    <p>Checkout <a href="/about">what is We Build SG</a> and <a href="/faq">how the events and repositories are curated</a>!</p>
 
 ul.social
   li
