--- a/views/layout/episode.pug
+++ b/views/layout/episode.pug
@@ -2,5 +2,5 @@ a.live(href="https://live.webuild.sg")
   h3 Catch We Build LIVE
   p A live Internet talk show with geeks in town on building, learning and sharing!
   p.countdown
-    | in <strong>#{days}</strong> days <strong>#{hours}</strong> hours <strong>#{minutes}</strong> minutes <strong>#{seconds}</strong> seconds
+    | in <strong>#{countdownTime.days}</strong> days <strong>#{countdownTime.hours}</strong> hours <strong>#{countdownTime.minutes}</strong> minutes <strong>#{countdownTime.seconds}</strong> seconds
   p#livetime.time=formattedTime
