removed auth0 request for user_group as it's deprecated #291

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -121,7 +121,7 @@ html(lang='en')
           auth: {
             responseType: 'token',
             params: {
-              scope: 'openid profile user_groups user_events'
+              scope: 'openid profile user_events'
             }
           }
         })
